--- a/Lightweight/Objects/Lightweight.build_log.htm
+++ b/Lightweight/Objects/Lightweight.build_log.htm
@@ -28,18 +28,6 @@ Project File Date:  03/19/2024
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
 Note: source file '.\src\Pin\Pin.cpp' - object file renamed from '.\Objects\Pin.o' to '.\Objects\pin_1.o'.
-compiling Processing_coord.cpp...
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\Vec2b\Vec2b.h(22): warning:  #1-D: last line of file ends without a newline
-  #endif /* VEC2B_H_ */
-src\Processing_coord\Processing_coord.h(50): warning:  #1-D: last line of file ends without a newline
-  };
-src\Processing_coord\Processing_coord.cpp(53): warning:  #1-D: last line of file ends without a newline
-  }
-src\Processing_coord\Processing_coord.cpp: 5 warnings, 0 errors
 compiling Goalkeeper.cpp...
 .\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
   #define P_MODE 1
@@ -49,9 +37,9 @@ compiling Goalkeeper.cpp...
   #define P_MODE 1
 .\src\Vec2b\Vec2b.h(22): warning:  #1-D: last line of file ends without a newline
   #endif /* VEC2B_H_ */
-.\src\Processing_coord\Processing_coord.h(50): warning:  #1-D: last line of file ends without a newline
+.\src\Processing_coord\Processing_coord.h(51): warning:  #1-D: last line of file ends without a newline
   };
-src\Goalkeeper\Goalkeeper.h(30): warning:  #1-D: last line of file ends without a newline
+src\Goalkeeper\Goalkeeper.h(29): warning:  #1-D: last line of file ends without a newline
   };
 src\Goalkeeper\Goalkeeper.cpp(12): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   	_targetIMU = RAD2DEG * atan2(float(_y), float(_x)) - 180;
@@ -69,11 +57,9 @@ src\Goalkeeper\Goalkeeper.cpp(121): warning:  #1035-D: single-precision operand 
   			if (globalAngToBall > angGoal) res.angle = adduct(180 + RAD2DEG * atan2(float(_y), float(_x)) - 90);
 src\Goalkeeper\Goalkeeper.cpp(122): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   			else res.angle = adduct(RAD2DEG * atan2(float(_y), float(_x)) - 90);
-src\Goalkeeper\Goalkeeper.cpp(158): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  	return Vec2b(u, adduct(atan2(float(pointY - _y), float(pointX - _x)) * RAD2DEG));
-src\Goalkeeper\Goalkeeper.cpp(164): warning:  #1-D: last line of file ends without a newline
+src\Goalkeeper\Goalkeeper.cpp(157): warning:  #1-D: last line of file ends without a newline
   }
-src\Goalkeeper\Goalkeeper.cpp: 16 warnings, 0 errors
+src\Goalkeeper\Goalkeeper.cpp: 15 warnings, 0 errors
 compiling Forward.cpp...
 .\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
   #define P_MODE 1
@@ -83,7 +69,7 @@ compiling Forward.cpp...
   #define P_MODE 1
 .\src\Vec2b\Vec2b.h(22): warning:  #1-D: last line of file ends without a newline
   #endif /* VEC2B_H_ */
-.\src\Processing_coord\Processing_coord.h(50): warning:  #1-D: last line of file ends without a newline
+.\src\Processing_coord\Processing_coord.h(51): warning:  #1-D: last line of file ends without a newline
   };
 src\Forward\Forward.h(40): warning:  #1-D: last line of file ends without a newline
   };
@@ -100,7 +86,7 @@ src\Forward\Forward.cpp(56): warning:  #111-D: statement is unreachable
 src\Forward\Forward.cpp(59): warning:  #111-D: statement is unreachable
   			break;
 src\Forward\Forward.cpp(79): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  	_targetIMU = -(90 - RAD2DEG * atan2(float(DIST_BETWEEN_GOALS - _y), float(_x)));
+  	_targetIMU = adduct180(RAD2DEG * atan2(float(DIST_BETWEEN_GOALS - _y), float(-_x)) - 90);
 src\Forward\Forward.cpp(84): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   	float ang = atan2(float(y), float(x)) * RAD2DEG;
 src\Forward\Forward.cpp(89): warning:  #1035-D: single-precision operand implicitly converted to double-precision
@@ -113,9 +99,25 @@ src\Forward\Forward.cpp(109): warning:  #1035-D: single-precision operand implic
   	int16_t angGoal = RAD2DEG * atan2(float(DIST_BETWEEN_GOALS - _y), float(_x));
 src\Forward\Forward.cpp(116): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   	int16_t angGoal = RAD2DEG * atan2(float(DIST_BETWEEN_GOALS - _y), float(_x));
+src\Forward\Forward.cpp(135): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  	return y > 0.8 * DOWN_Y + DELTA_DIST;
 src\Forward\Forward.cpp(136): warning:  #1-D: last line of file ends without a newline
   }
-src\Forward\Forward.cpp: 20 warnings, 0 errors
+src\Forward\Forward.cpp: 21 warnings, 0 errors
+compiling Processing_coord.cpp...
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
+  #define P_MODE 1
+.\src\Vec2b\Vec2b.h(22): warning:  #1-D: last line of file ends without a newline
+  #endif /* VEC2B_H_ */
+src\Processing_coord\Processing_coord.h(51): warning:  #1-D: last line of file ends without a newline
+  };
+src\Processing_coord\Processing_coord.cpp(59): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  	return Vec2b(u, adduct(atan2(float(pointY - _y), float(pointX - _x)) * RAD2DEG));
+src\Processing_coord\Processing_coord.cpp(60): warning:  #1-D: last line of file ends without a newline
+  }
+src\Processing_coord\Processing_coord.cpp: 6 warnings, 0 errors
 compiling main.cpp...
 .\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
   #define P_MODE 1
@@ -219,7 +221,7 @@ compiling main.cpp...
   };
 .\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
   #define P_MODE 1
-.\src\Processing_coord\Processing_coord.h(50): warning:  #1-D: last line of file ends without a newline
+.\src\Processing_coord\Processing_coord.h(51): warning:  #1-D: last line of file ends without a newline
   };
 .\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
   #define P_MODE 1
@@ -227,7 +229,7 @@ compiling main.cpp...
   };
 .\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
   #define P_MODE 1
-.\src\Goalkeeper\Goalkeeper.h(30): warning:  #1-D: last line of file ends without a newline
+.\src\Goalkeeper\Goalkeeper.h(29): warning:  #1-D: last line of file ends without a newline
   };
 .\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
   #define P_MODE 1
@@ -247,7 +249,7 @@ compiling main.cpp...
   #define P_MODE 1
 .\src\Button\Button.h(17): warning:  #1-D: last line of file ends without a newline
   };
-.\src\Robot\Robot.h(344): warning:  #1-D: last line of file ends without a newline
+.\src\Robot\Robot.h(347): warning:  #1-D: last line of file ends without a newline
   }
 src\main\main.cpp(18): warning:  #111-D: statement is unreachable
   	return 0;
@@ -255,8 +257,8 @@ src\main\main.cpp(19): warning:  #1-D: last line of file ends without a newline
   }
 src\main\main.cpp: 68 warnings, 0 errors
 linking...
-Program Size: Code=37818 RO-data=1426 RW-data=368 ZI-data=16912  
-".\Objects\Lightweight.axf" - 0 Error(s), 109 Warning(s).
+Program Size: Code=39322 RO-data=1426 RW-data=368 ZI-data=16912  
+".\Objects\Lightweight.axf" - 0 Error(s), 110 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -282,12 +284,12 @@ Package Vendor: Keil
    * Component: ARM::CMSIS:CORE:5.6.0
 
    * Component: Keil::Device:Startup:2.6.3
-      Source file:   Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/arm/startup_stm32f407xx.s
-      Source file:   Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/system_stm32f4xx.c
-      Source file:   MDK/Device/Source/ARM/STM32F40xxx_41xxx_OPT.s
       Include file:  Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h
+      Source file:   Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/arm/startup_stm32f407xx.s
+      Source file:   MDK/Device/Source/ARM/STM32F40xxx_41xxx_OPT.s
       Source file:   MDK/Device/Source/ARM/STM32F4xx_OTP.s
-Build Time Elapsed:  00:00:04
+      Source file:   Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/system_stm32f4xx.c
+Build Time Elapsed:  00:00:05
 </pre>
 </body>
 </html>
