--- a/Lightweight/Objects/Lightweight.build_log.htm
+++ b/Lightweight/Objects/Lightweight.build_log.htm
@@ -28,50 +28,6 @@ Project File Date:  03/19/2024
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
 Note: source file '.\src\Pin\Pin.cpp' - object file renamed from '.\Objects\Pin.o' to '.\Objects\pin_1.o'.
-compiling IMU_USART.cpp...
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\time_service\time_service.h(13): warning:  #1-D: last line of file ends without a newline
-  }
-.\src\Pin\Pin.h(71): warning:  #1-D: last line of file ends without a newline
-  #endif /* PIN_H_ */
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\usart1\usart1.h(17): warning:  #1-D: last line of file ends without a newline
-  }
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\usart2\usart2.h(17): warning:  #1-D: last line of file ends without a newline
-  }
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\usart3\usart3.h(17): warning:  #1-D: last line of file ends without a newline
-  }
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\usart6\usart6.h(17): warning:  #1-D: last line of file ends without a newline
-  }
-src\IMU_USART\IMU_USART.h(37): warning:  #1-D: last line of file ends without a newline
-  };
-src\IMU_USART\IMU_USART.cpp(105): warning:  #1-D: last line of file ends without a newline
-  }
-src\IMU_USART\IMU_USART.cpp: 14 warnings, 0 errors
-compiling TSOP.cpp...
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\Pin\Pin.h(71): warning:  #1-D: last line of file ends without a newline
-  #endif /* PIN_H_ */
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\adc\Adc.h(25): warning:  #1-D: last line of file ends without a newline
-  };
-src\TSOP\TSOP.h(29): warning:  #1-D: last line of file ends without a newline
-  };
-src\TSOP\TSOP.cpp(100): warning:  #1-D: last line of file ends without a newline
-  }
-src\TSOP\TSOP.cpp: 6 warnings, 0 errors
 compiling main.cpp...
 .\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
   #define P_MODE 1
@@ -175,11 +131,11 @@ compiling main.cpp...
   };
 .\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
   #define P_MODE 1
-.\src\Processing_coord\Processing_coord.h(53): warning:  #1-D: last line of file ends without a newline
+.\src\Processing_coord\Processing_coord.h(54): warning:  #1-D: last line of file ends without a newline
   };
 .\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
   #define P_MODE 1
-.\src\Forward\Forward.h(46): warning:  #1-D: last line of file ends without a newline
+.\src\Forward\Forward.h(47): warning:  #1-D: last line of file ends without a newline
   };
 .\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
   #define P_MODE 1
@@ -201,18 +157,24 @@ compiling main.cpp...
   #include "Button.h"
 .\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
   #define P_MODE 1
-.\src\Button\Button.h(17): warning:  #1-D: last line of file ends without a newline
+.\src\Button\Button.h(18): warning:  #1-D: last line of file ends without a newline
   };
-.\src\Robot\Robot.h(369): warning:  #1-D: last line of file ends without a newline
+.\src\Robot\Robot.h(245): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  		if (abs(ang) <= 5 && dist > 9.5) {
+.\src\Robot\Robot.h(295): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  					if (myForward.robotNearOUTSides()) speed *= 0.86;
+.\src\Robot\Robot.h(296): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  					else if (myForward.robotNearOUTUpDown()) speed *= 0.68;
+.\src\Robot\Robot.h(382): warning:  #1-D: last line of file ends without a newline
   }
 src\main\main.cpp(18): warning:  #111-D: statement is unreachable
   	return 0;
 src\main\main.cpp(19): warning:  #1-D: last line of file ends without a newline
   }
-src\main\main.cpp: 68 warnings, 0 errors
+src\main\main.cpp: 71 warnings, 0 errors
 linking...
-Program Size: Code=40830 RO-data=1430 RW-data=392 ZI-data=17040  
-".\Objects\Lightweight.axf" - 0 Error(s), 88 Warning(s).
+Program Size: Code=41438 RO-data=1430 RW-data=392 ZI-data=17040  
+".\Objects\Lightweight.axf" - 0 Error(s), 71 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -238,12 +200,12 @@ Package Vendor: Keil
    * Component: ARM::CMSIS:CORE:5.6.0
 
    * Component: Keil::Device:Startup:2.6.3
-      Include file:  Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h
       Source file:   Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/arm/startup_stm32f407xx.s
+      Source file:   Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/system_stm32f4xx.c
       Source file:   MDK/Device/Source/ARM/STM32F40xxx_41xxx_OPT.s
       Source file:   MDK/Device/Source/ARM/STM32F4xx_OTP.s
-      Source file:   Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/system_stm32f4xx.c
-Build Time Elapsed:  00:00:02
+      Include file:  Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
