--- a/Lightweight/Objects/Lightweight.build_log.htm
+++ b/Lightweight/Objects/Lightweight.build_log.htm
@@ -28,24 +28,6 @@ Project File Date:  04/05/2024
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
 Note: source file '.\src\Pin\Pin.cpp' - object file renamed from '.\Objects\Pin.o' to '.\Objects\pin_1.o'.
-compiling BallSensor.cpp...
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\Pin\Pin.h(71): warning:  #1-D: last line of file ends without a newline
-  #endif /* PIN_H_ */
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\adc\adc.h(25): warning:  #1-D: last line of file ends without a newline
-  };
-.\src\dma\Dma.h(19): warning:  #1-D: last line of file ends without a newline
-  };
-src\BallSensor\BallSensor.h(17): warning:  #1-D: last line of file ends without a newline
-  };
-src\BallSensor\BallSensor.cpp(18): warning:  #1-D: last line of file ends without a newline
-  }
-src\BallSensor\BallSensor.cpp: 8 warnings, 0 errors
 compiling main.cpp...
 .\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
   #define P_MODE 1
@@ -149,15 +131,15 @@ compiling main.cpp...
   };
 .\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
   #define P_MODE 1
-.\src\Processing_coord\Processing_coord.h(55): warning:  #1-D: last line of file ends without a newline
+.\src\Processing_coord\Processing_coord.h(57): warning:  #1-D: last line of file ends without a newline
   };
 .\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
   #define P_MODE 1
-.\src\Forward\Forward.h(67): warning:  #1-D: last line of file ends without a newline
+.\src\Forward\Forward.h(75): warning:  #1-D: last line of file ends without a newline
   };
 .\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
   #define P_MODE 1
-.\src\Goalkeeper\Goalkeeper.h(29): warning:  #1-D: last line of file ends without a newline
+.\src\Goalkeeper\Goalkeeper.h(30): warning:  #1-D: last line of file ends without a newline
   };
 .\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
   #define P_MODE 1
@@ -181,20 +163,22 @@ compiling main.cpp...
   #define P_MODE 1
 .\src\BallSensor\BallSensor.h(17): warning:  #1-D: last line of file ends without a newline
   };
-.\src\Robot\Robot.h(240): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+.\src\Robot\Robot.h(243): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  			if (dist < 5.1) offset = 0;
+.\src\Robot\Robot.h(262): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   			else if (dist > 9.17 && abs(ang) > 25) speedForward *= 0.9;
-.\src\Robot\Robot.h(253): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  		if (abs(ang) <= 10 && dist > 9.4) { 
-.\src\Robot\Robot.h(394): warning:  #1-D: last line of file ends without a newline
+.\src\Robot\Robot.h(370): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  			angToGoal = int16_t(RAD2DEG * atan2(float(y), float(x)));
+.\src\Robot\Robot.h(470): warning:  #1-D: last line of file ends without a newline
   }
 src\main\main.cpp(18): warning:  #111-D: statement is unreachable
   	return 0;
 src\main\main.cpp(19): warning:  #1-D: last line of file ends without a newline
   }
-src\main\main.cpp: 72 warnings, 0 errors
+src\main\main.cpp: 73 warnings, 0 errors
 linking...
-Program Size: Code=43418 RO-data=1426 RW-data=400 ZI-data=16176  
-".\Objects\Lightweight.axf" - 0 Error(s), 80 Warning(s).
+Program Size: Code=46962 RO-data=1426 RW-data=408 ZI-data=16176  
+".\Objects\Lightweight.axf" - 0 Error(s), 73 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -220,10 +204,10 @@ Package Vendor: Keil
    * Component: ARM::CMSIS:CORE:5.6.0
 
    * Component: Keil::Device:Startup:2.6.3
-      Source file:   MDK/Device/Source/ARM/STM32F40xxx_41xxx_OPT.s
-      Source file:   Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/arm/startup_stm32f407xx.s
-      Include file:  Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h
       Source file:   MDK/Device/Source/ARM/STM32F4xx_OTP.s
+      Source file:   MDK/Device/Source/ARM/STM32F40xxx_41xxx_OPT.s
+      Include file:  Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h
+      Source file:   Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/arm/startup_stm32f407xx.s
       Source file:   Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/system_stm32f4xx.c
 Build Time Elapsed:  00:00:02
 </pre>
