--- a/Lightweight/Objects/Lightweight.build_log.htm
+++ b/Lightweight/Objects/Lightweight.build_log.htm
@@ -28,157 +28,45 @@ Project File Date:  04/05/2024
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
 Note: source file '.\src\Pin\Pin.cpp' - object file renamed from '.\Objects\Pin.o' to '.\Objects\pin_1.o'.
-compiling main.cpp...
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\Pin\Pin.h(71): warning:  #1-D: last line of file ends without a newline
-  #endif /* PIN_H_ */
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\usart1\usart1.h(17): warning:  #1-D: last line of file ends without a newline
-  }
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\usart2\usart2.h(17): warning:  #1-D: last line of file ends without a newline
-  }
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\usart3\usart3.h(17): warning:  #1-D: last line of file ends without a newline
-  }
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\usart6\usart6.h(17): warning:  #1-D: last line of file ends without a newline
-  }
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\usable\usable.h(36): warning:  #1-D: last line of file ends without a newline
-  #endif /* USABLE_H_ */
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\adc\adc.h(25): warning:  #1-D: last line of file ends without a newline
-  };
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\dma\dma.h(19): warning:  #1-D: last line of file ends without a newline
-  };
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\time_service\time_service.h(13): warning:  #1-D: last line of file ends without a newline
-  }
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\Motor\Motor.h(16): warning:  #1-D: last line of file ends without a newline
-  };
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\SPI_1\SPI_1.h(34): warning:  #1-D: last line of file ends without a newline
-  }
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\SPI_DOT\SPI_DOT.h(7): warning:  #1-D: last line of file ends without a newline
-  bool SPIAvailable();
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\SPI_DOT\SPI_DOT.h(7): warning:  #1-D: last line of file ends without a newline
-  bool SPIAvailable();
+compiling Goalkeeper.cpp...
 .\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
   #define P_MODE 1
 .\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
   #define P_MODE 1
-.\src\SPI_DOT\SPI_DOT.h(7): warning:  #1-D: last line of file ends without a newline
-  bool SPIAvailable();
 .\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
   #define P_MODE 1
-.\src\omniplatform\omniplatform.h(17): warning:  #1-D: last line of file ends without a newline
-  };
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\IMU_USART\IMU_USART.h(37): warning:  #1-D: last line of file ends without a newline
-  };
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\OpenMV\OpenMV.h(9): warning:  #47-D: incompatible redefinition of macro "RAD2DEG"  (declared at line 6 of ".\src\omniplatform\omniplatform.h")
-  #define RAD2DEG	57.2957795130823208767f
-.\src\OpenMV\OpenMV.h(10): warning:  #47-D: incompatible redefinition of macro "DEG2RAD"  (declared at line 7 of ".\src\omniplatform\omniplatform.h")
-  #define DEG2RAD	0.017453292519943295769f
-.\src\OpenMV\OpenMV.h(37): warning:  #1-D: last line of file ends without a newline
-  };
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\TSOP\TSOP.h(7): warning:  #47-D: incompatible redefinition of macro "DEG2RAD"  (declared at line 10 of ".\src\OpenMV\OpenMV.h")
-  #define DEG2RAD	0.01745329251994329576f
-.\src\TSOP\TSOP.h(29): warning:  #1-D: last line of file ends without a newline
-  };
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\I2C\I2C.h(28): warning:  #1-D: last line of file ends without a newline
-  };
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\IR_Locator\IR_Locator.h(25): warning:  #1-D: last line of file ends without a newline
-  };
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\Vec2b\Vec2b.h(8): warning:  #47-D: incompatible redefinition of macro "RAD2DEG"  (declared at line 6 of ".\src\TSOP\TSOP.h")
-  #define RAD2DEG	57.2957795130823208767
-.\src\Vec2b\Vec2b.h(9): warning:  #47-D: incompatible redefinition of macro "DEG2RAD"  (declared at line 7 of ".\src\TSOP\TSOP.h")
-  #define DEG2RAD	0.01745329251994329576
 .\src\Vec2b\Vec2b.h(23): warning:  #1-D: last line of file ends without a newline
   #endif /* VEC2B_H_ */
-.\src\Queues_ball\Queues_ball.h(67): warning:  #1-D: last line of file ends without a newline
-  };
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
 .\src\Processing_coord\Processing_coord.h(48): warning:  #1-D: last line of file ends without a newline
   };
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\Forward\Forward.h(71): warning:  #1-D: last line of file ends without a newline
+src\Goalkeeper\Goalkeeper.h(43): warning:  #1-D: last line of file ends without a newline
   };
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\Goalkeeper\Goalkeeper.h(43): warning:  #1-D: last line of file ends without a newline
-  };
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\flash\flash.h(16): warning:  #111-D: statement is unreachable
-    FLASH_Lock();
-.\src\flash\flash.h(17): warning:  #1-D: last line of file ends without a newline
+src\Goalkeeper\Goalkeeper.cpp(12): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  	_targetIMU = adduct180(RAD2DEG * atan2(float(_y), float(_x)) - 90);
+src\Goalkeeper\Goalkeeper.cpp(18): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  	_targetIMU = RAD2DEG * atan2(float(_y), float(_x)) - 180;
+src\Goalkeeper\Goalkeeper.cpp(28): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  	int16_t angGoal = RAD2DEG * atan2(float(_y), float(_x));
+src\Goalkeeper\Goalkeeper.cpp(39): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  	int16_t angGoal = RAD2DEG * atan2(float(_y), float(_x));
+src\Goalkeeper\Goalkeeper.cpp(57): warning:  #177-D: variable "speed"  was declared but never referenced
+  		float err, speed;
+src\Goalkeeper\Goalkeeper.cpp(84): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  	int16_t angGoal = RAD2DEG * atan2(float(_y), float(_x));
+src\Goalkeeper\Goalkeeper.cpp(111): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  			if (globalAngToBall > angGoal) res.angle = adduct(RAD2DEG * atan2(float(_y), float(_x)) + 90);
+src\Goalkeeper\Goalkeeper.cpp(112): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  			else res.angle = adduct(180 + RAD2DEG * atan2(float(_y), float(_x)) + 90);
+src\Goalkeeper\Goalkeeper.cpp(130): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  			if (globalAngToBall > angGoal) res.angle = adduct(180 + RAD2DEG * atan2(float(_y), float(_x)) - 90);
+src\Goalkeeper\Goalkeeper.cpp(131): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  			else res.angle = adduct(RAD2DEG * atan2(float(_y), float(_x)) - 90);
+src\Goalkeeper\Goalkeeper.cpp(166): warning:  #1-D: last line of file ends without a newline
   }
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\Voltage\Voltage.h(18): warning:  #1-D: last line of file ends without a newline
-  };
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\Button\Button.h(23): warning:  #1-D: last line of file ends without a newline
-  };
-.\src\main\libraries.h(34): warning:  #1-D: last line of file ends without a newline
-  #include "BallSensor.h"
-.\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
-  #define P_MODE 1
-.\src\BallSensor\BallSensor.h(17): warning:  #1-D: last line of file ends without a newline
-  };
-.\src\Robot\Robot.h(253): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  			if (dist < 5.1) offset = 0;
-.\src\Robot\Robot.h(254): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  			else if (dist > 9.17 && abs(ang) > 25) speedForward *= 0.9;
-.\src\Robot\Robot.h(365): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  				angToGoal = int16_t(RAD2DEG * atan2(float(y), float(x)));
-.\src\Robot\Robot.h(470): warning:  #1-D: last line of file ends without a newline
-  }
-src\main\main.cpp(14): warning:  #111-D: statement is unreachable
-  	return 0;
-src\main\main.cpp(15): warning:  #1-D: last line of file ends without a newline
-  }
-src\main\main.cpp: 73 warnings, 0 errors
+src\Goalkeeper\Goalkeeper.cpp: 17 warnings, 0 errors
 linking...
-Program Size: Code=47718 RO-data=1430 RW-data=416 ZI-data=16224  
-".\Objects\Lightweight.axf" - 0 Error(s), 73 Warning(s).
+Program Size: Code=47814 RO-data=1430 RW-data=416 ZI-data=16224  
+".\Objects\Lightweight.axf" - 0 Error(s), 17 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -204,10 +92,10 @@ Package Vendor: Keil
    * Component: ARM::CMSIS:CORE:5.6.0
 
    * Component: Keil::Device:Startup:2.6.3
-      Source file:   MDK/Device/Source/ARM/STM32F40xxx_41xxx_OPT.s
+      Source file:   MDK/Device/Source/ARM/STM32F4xx_OTP.s
       Source file:   Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/arm/startup_stm32f407xx.s
       Include file:  Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h
-      Source file:   MDK/Device/Source/ARM/STM32F4xx_OTP.s
+      Source file:   MDK/Device/Source/ARM/STM32F40xxx_41xxx_OPT.s
       Source file:   Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/system_stm32f4xx.c
 Build Time Elapsed:  00:00:02
 </pre>
