--- a/Lightweight/Objects/Lightweight.build_log.htm
+++ b/Lightweight/Objects/Lightweight.build_log.htm
@@ -138,7 +138,7 @@ compiling main.cpp...
   };
 .\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
   #define P_MODE 1
-.\src\Goalkeeper\Goalkeeper.h(59): warning:  #1-D: last line of file ends without a newline
+.\src\Goalkeeper\Goalkeeper.h(60): warning:  #1-D: last line of file ends without a newline
   };
 .\src\main\project_config.h(18): warning:  #1-D: last line of file ends without a newline
   #define P_MODE 1
@@ -162,24 +162,26 @@ compiling main.cpp...
   #define P_MODE 1
 .\src\BallSensor\BallSensor.h(20): warning:  #1-D: last line of file ends without a newline
   };
-.\src\Robot\Robot.h(261): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+.\src\Robot\Robot.h(263): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   			} else if (dist > 9.17 && abs(ang) > 25) speedForward *= 0.9;
-.\src\Robot\Robot.h(274): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+.\src\Robot\Robot.h(276): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   		if (ballGrip || (abs(ang) <= 15 && dist > 9.5)) { 
-.\src\Robot\Robot.h(283): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+.\src\Robot\Robot.h(285): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   		if (!(ballGrip || dist > 7.9 && abs(ang) <= 25)) {
-.\src\Robot\Robot.h(421): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+.\src\Robot\Robot.h(388): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  		int16_t angGoal = RAD2DEG * atan2(float(y), float(x));
+.\src\Robot\Robot.h(427): warning:  #1035-D: single-precision operand implicitly converted to double-precision
   				angToGoal = int16_t(RAD2DEG * atan2(float(y), float(x)));
-.\src\Robot\Robot.h(582): warning:  #1-D: last line of file ends without a newline
+.\src\Robot\Robot.h(589): warning:  #1-D: last line of file ends without a newline
   }
-src\main\main.cpp(31): warning:  #111-D: statement is unreachable
+src\main\main.cpp(36): warning:  #111-D: statement is unreachable
   	return 0;
-src\main\main.cpp(32): warning:  #1-D: last line of file ends without a newline
+src\main\main.cpp(37): warning:  #1-D: last line of file ends without a newline
   }
-src\main\main.cpp: 74 warnings, 0 errors
+src\main\main.cpp: 75 warnings, 0 errors
 linking...
-Program Size: Code=51782 RO-data=1430 RW-data=432 ZI-data=16088  
-".\Objects\Lightweight.axf" - 0 Error(s), 74 Warning(s).
+Program Size: Code=51770 RO-data=1426 RW-data=440 ZI-data=16088  
+".\Objects\Lightweight.axf" - 0 Error(s), 75 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -206,9 +208,9 @@ Package Vendor: Keil
 
    * Component: Keil::Device:Startup:2.6.3
       Source file:   MDK\Device\Source\ARM\STM32F4xx_OTP.s
+      Include file:  Drivers\CMSIS\Device\ST\STM32F4xx\Include\stm32f4xx.h
       Source file:   MDK\Device\Source\ARM\STM32F40xxx_41xxx_OPT.s
       Source file:   Drivers\CMSIS\Device\ST\STM32F4xx\Source\Templates\arm\startup_stm32f407xx.s
-      Include file:  Drivers\CMSIS\Device\ST\STM32F4xx\Include\stm32f4xx.h
       Source file:   Drivers\CMSIS\Device\ST\STM32F4xx\Source\Templates\system_stm32f4xx.c
 Build Time Elapsed:  00:00:02
 </pre>
